--- a/rmq/rabbitmq.conf
+++ b/rmq/rabbitmq.conf
@@ -1,7 +1,7 @@
 cluster_partition_handling = pause_minority
 loopback_users = none
 log.console = true
-log.console.level = debug
+log.console.level = info
 log.file.level = info
 log.exchange = false
 log.exchange.level = info
