--- a/rmq/Dockerfile
+++ b/rmq/Dockerfile
@@ -1,13 +1,12 @@
-ARG RABBITMQ_DOCKER_TAG=rabbitmq:3-management
+ARG RABBITMQ_DOCKER_TAG=rabbitmq:3.11.28-management
 
 FROM ${RABBITMQ_DOCKER_TAG}
 
-ENV LOG=debug
-
-RUN set -eux; \
-    export DEBIAN_FRONTEND=noninteractive; \
-    apt-get update; \
-    apt-get install --yes --no-install-recommends curl tcpdump net-tools iproute2
+# ENV LOG=debug
+# RUN set -eux; \
+#     export DEBIAN_FRONTEND=noninteractive; \
+#     apt-get update; \
+#     apt-get install --yes --no-install-recommends curl tcpdump net-tools iproute2
 
 COPY --chown=rabbitmq:rabbitmq --chmod=0400 erlang.cookie /var/lib/rabbitmq/.erlang.cookie
 COPY --chown=rabbitmq:rabbitmq enabled_plugins /etc/rabbitmq/
